--- a/index.html
+++ b/index.html
@@ -1,1 +1,104 @@
-Halo Dunia! Selamat datang di halaman web saya
+<!DOCTYPE html>
+<html>
+       <head>
+              <meta name="viewport" content="width=device-width, initial-scale=1">
+              <title>CV Muhammad Sofi Yuniarto</title>
+              <link rel="stylesheet" href="assets/styles/style.css">
+       </head>
+       <body>
+
+              <header>
+                     <div class="jumbotron">
+                            <h1>Muhammad Sofi Yuniarto</h1>
+                            <p>Programmer, Full Time Learner</p>
+                     </div>
+                     <nav>
+                            <ul>
+                                   <li><a href="#beranda">Beranda</a></li>
+                                   <li><a href="#education">Education</a></li>
+                                   <li><a href="#experience">Experience</a></li>
+                                   <li><a href="#skill">Skill</a></li>
+                                   <li><a href="#sosmed">Sosial Media</a></li>
+                            </ul>
+                     </nav>
+              </header>
+
+              <main>
+                     <div id="content">
+                            <article id="beranda" class="card">
+                                   <h2 id="beranda">Beranda</h2>
+                                   <p>Experienced web developer with highly skilled in developing using PHP, HTML, JavaScript, and MySQL.</p>
+                            </article>
+
+                            <article id="education" class="card">
+                                   <h2 id="education">Education</h2>
+                                   <p>2019 - Lulus S1 Ilmu Komputer/ Informatika, Universitas Diponegoro</p>
+                            </article>
+
+                            <article id="experience" class="card">
+                                   <h2 id="experience">Experience</h2>
+                                   <section>
+                                          <h3>Pengalaman Kerja</h3>
+                                          <h4>2019 - Sekarang</h4>
+                                          <p>PT CDC Global Informatika</p>
+                                   </section>
+                                   <section>
+                                          <h3>Pengalaman Organisasi</h3>
+                                          <h4>2014</h4>
+                                          <p>UKM Perisai Diri Universitas Diponegoro</p>
+                                   </section>
+                            </article>
+                            
+                            <article id="skill" class="card">
+                                   <h2 id="skill">Skill</h2>
+                                   <p>PHP</p>
+                                   <p>JavaScript</p>
+                                   <p>CSS</p>
+                                   <p>MySQL</p>
+                                   <p>Python</p>
+                            </article>
+                            
+                            <article id="sosmed" class="card">
+                                   <h2 id="sosmed">Sosial Media</h2>
+                                   <p>Silakan kunjungi akun media sosial saya</p>
+                                   <select type="text" id="pesan" onchange="myFunction()">
+                                          <option value="">---Silakan pilih---</option>
+                                          <option value="instagram">Instagram</option>
+                                          <option value="linkedin">Linkedin</option>
+                                   </select>
+                            </article>
+                     </div>
+
+                     <aside>
+                            <article class="profile">
+                                   <header>
+                                          <h2>Muhammad Sofi Yuniarto</h2>
+                                          <p>Programmer, Full Time Learner</p>
+                                          <figure>
+                                                 <img src="assets/image/profil.jpeg" class="profile">
+                                                 <figcaption>Foto Profil</figcaption>
+                                          </figure>
+                                   </header>
+                                   <section>
+                                          <h3>About Me</h3>
+                                          <table>
+                                                 <tr>
+                                                        <th>Birth Place</th>
+                                                        <td>Pekalongan</td>
+                                                 </tr>
+                                                 <tr>
+                                                        <th>Birth Time</th>
+                                                        <td>1994-06-15</td>
+                                                 </tr>
+                                          </table>
+                                   </section>
+                            </article>
+                     </aside>
+              </main>
+
+              <footer>
+                     <p>Curiculum Vitae &#169; 2021, Muhammad Sofi Yuniarto</p>
+              </footer>
+              <script src="assets/styles/submission.js"></script>
+       </body>
+</html>
