hidden birth time

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                                                         <th>Birth Place</th>
                                                         <td>Pekalongan</td>
                                                  </tr>
-                                                 <tr>
-                                                        <th>Birth Time</th>
-                                                        <td>1994-06-15</td>
-                                                 </tr>
+<!--                                                  <tr> -->
+<!--                                                         <th>Birth Time</th> -->
+<!--                                                         <td>1994-06-15</td> -->
+<!--                                                  </tr> -->
                                           </table>
                                    </section>
                             </article>
